--- a/index.html
+++ b/index.html
@@ -9,152 +9,154 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-  <div class="column is-8-mobile is-4-tablet is-4-desktop">
-    <div class="card">
-      <div class="card-image">
-        <figure class="image">
-          <img src:>
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <a href="https://user-images.githubusercontent.com/101283174/163512126-d8f0d253-8d8f-4f7d-9a83-010d1c50411c.gif"><button id="start-button" class="button is-danger is-outlined">Celebrity Matchmaker</button></a>
+  <nav>
+    <ul>
+        <li><a href="#about-me">About Me</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#" target="_blank">Resume</a></li>
+    </ul>
+  </nav>
+  <main>
+    <div class="column is-8-mobile is-4-tablet is-4-desktop">
+      <div class="card">
+        <div class="card-image">
+          <figure class="image">
+            <img src:>
+          </figure>
+        </div>
+        <div class="card-content">
+          <div class="media">
+            <div class="media-content">
+              <a href="https://user-images.githubusercontent.com/101283174/163512126-d8f0d253-8d8f-4f7d-9a83-010d1c50411c.gif"><button id="start-button" class="button is-danger is-outlined">Celebrity Matchmaker</button></a>
+            </div>
           </div>
-        </div>
-        <div class="content">
-          hello
-          <a href="#" #css></a>
-          <br>
+          <div class="content">
+            hello
+            <a href="#" #css></a>
+            <br>
+
+          </div>
 
         </div>
-
       </div>
     </div>
-  </div>
-  <div class="column is-8-mobile is-4-tablet is-4-desktop">
-    <div class="card">
-      <div class="card-image">
-        <figure class="image">
-          <img src:>
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-4">Callan</p>
-            <p class="subtitle is-6">Hunter</p>
+    <div class="column is-8-mobile is-4-tablet is-4-desktop">
+      <div class="card">
+        <div class="card-image">
+          <figure class="image">
+            <img src:>
+          </figure>
+        </div>
+        <div class="card-content">
+          <div class="media">
+            <div class="media-content">
+              <a href="https://user-images.githubusercontent.com/101283174/163512126-d8f0d253-8d8f-4f7d-9a83-010d1c50411c.gif"><button id="start-button" class="button is-danger is-outlined">Celebrity Matchmaker</button></a>
+            </div>
           </div>
-        </div>
-        <div class="content">
-          hello
-          <a href="#" #css></a>
-          <br>
+          <div class="content">
+            hello
+            <a href="#" #css></a>
+            <br>
+
+          </div>
 
         </div>
-
       </div>
     </div>
-  </div>
-  <div class="column is-8-mobile is-4-tablet is-4-desktop">
-    <div class="card">
-      <div class="card-image">
-        <figure class="image">
-          <img src:>
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-4">Callan</p>
-            <p class="subtitle is-6">Hunter</p>
+    <div class="column is-8-mobile is-4-tablet is-4-desktop">
+      <div class="card">
+        <div class="card-image">
+          <figure class="image">
+            <img src:>
+          </figure>
+        </div>
+        <div class="card-content">
+          <div class="media">
+            <div class="media-content">
+              <a href="https://user-images.githubusercontent.com/101283174/163512126-d8f0d253-8d8f-4f7d-9a83-010d1c50411c.gif"><button id="start-button" class="button is-danger is-outlined">Celebrity Matchmaker</button></a>
+            </div>
           </div>
-        </div>
-        <div class="content">
-          hello
-          <a href="#" #css></a>
-          <br>
+          <div class="content">
+            hello
+            <a href="#" #css></a>
+            <br>
+
+          </div>
 
         </div>
-
       </div>
     </div>
-  </div>
-
-  <div class="column is-8-mobile is-4-tablet is-4-desktop">
-    <div class="card">
-      <div class="card-image">
-        <figure class="image">
-          <img src:>
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-4">Callan</p>
-            <p class="subtitle is-6">Hunter</p>
+    <div class="column is-8-mobile is-4-tablet is-4-desktop">
+      <div class="card">
+        <div class="card-image">
+          <figure class="image">
+            <img src:>
+          </figure>
+        </div>
+        <div class="card-content">
+          <div class="media">
+            <div class="media-content">
+              <a href="https://user-images.githubusercontent.com/101283174/163512126-d8f0d253-8d8f-4f7d-9a83-010d1c50411c.gif"><button id="start-button" class="button is-danger is-outlined">Celebrity Matchmaker</button></a>
+            </div>
           </div>
-        </div>
-        <div class="content">
-          hello
-          <a href="#" #css></a>
-          <br>
+          <div class="content">
+            hello
+            <a href="#" #css></a>
+            <br>
+
+          </div>
 
         </div>
-
       </div>
     </div>
-  </div>
-
-  <div class="column is-8-mobile is-4-tablet is-4-desktop">
-    <div class="card">
-      <div class="card-image">
-        <figure class="image">
-          <img src:>
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-4">Callan</p>
-            <p class="subtitle is-6">Hunter</p>
+    <div class="column is-8-mobile is-4-tablet is-4-desktop">
+      <div class="card">
+        <div class="card-image">
+          <figure class="image">
+            <img src:>
+          </figure>
+        </div>
+        <div class="card-content">
+          <div class="media">
+            <div class="media-content">
+              <a href="https://user-images.githubusercontent.com/101283174/163512126-d8f0d253-8d8f-4f7d-9a83-010d1c50411c.gif"><button id="start-button" class="button is-danger is-outlined">Celebrity Matchmaker</button></a>
+            </div>
           </div>
-        </div>
-        <div class="content">
-          hello
-          <a href="#" #css></a>
-          <br>
+          <div class="content">
+            hello
+            <a href="#" #css></a>
+            <br>
+
+          </div>
 
         </div>
-
       </div>
     </div>
-  </div>
-
-  <div class="column is-8-mobile is-4-tablet is-4-desktop">
-    <div class="card">
-      <div class="card-image">
-        <figure class="image">
-          <img src:>
-        </figure>
-      </div>
-      <div class="card-content">
-        <div class="media">
-          <div class="media-content">
-            <p class="title is-4">Callan</p>
-            <p class="subtitle is-6">Hunter</p>
+    <div class="column is-8-mobile is-4-tablet is-4-desktop">
+      <div class="card">
+        <div class="card-image">
+          <figure class="image">
+            <img src:>
+          </figure>
+        </div>
+        <div class="card-content">
+          <div class="media">
+            <div class="media-content">
+              <a href="https://user-images.githubusercontent.com/101283174/163512126-d8f0d253-8d8f-4f7d-9a83-010d1c50411c.gif"><button id="start-button" class="button is-danger is-outlined">Celebrity Matchmaker</button></a>
+            </div>
           </div>
-        </div>
-        <div class="content">
-          hello
-          <a href="#" #css></a>
-          <br>
+          <div class="content">
+            hello
+            <a href="#" #css></a>
+            <br>
+
+          </div>
 
         </div>
-
       </div>
     </div>
-  </div>
+  
   https://user-images.githubusercontent.com/101283174/163512126-d8f0d253-8d8f-4f7d-9a83-010d1c50411c.gif
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="/assets/js/script.js"></script>
