--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     </ul>
   </nav>
   <main>
+    <section>
+    <h2 id="projects">Projects</h2>
     <div class="column is-8-mobile is-4-tablet is-4-desktop">
       <div class="card">
         <div class="card-image">
@@ -156,6 +158,16 @@
         </div>
       </div>
     </div>
+    </section>
+    <section class="footer">
+      <h2 id="contact">Contact</h2>
+      <ul>
+          <li><a href="https://www.linkedin.com/in/callan-hunter-195816196/" target="_blank">LinkedIn</a></li>
+          <li><a href="https://github.com/callanhunter" target="_blank">Github</a></li>
+          <li><a href="#">callan57hunter@gmail.com</a></li>
+          <li><a href="#">(555) 555-5555</a></li>
+      </ul>
+  </section>
   
   https://user-images.githubusercontent.com/101283174/163512126-d8f0d253-8d8f-4f7d-9a83-010d1c50411c.gif
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
