change project style

--- a/index.html
+++ b/index.html
@@ -20,145 +20,63 @@
   <main>
     <section>
     <h2 id="projects">Projects</h2>
-    <div class="column is-8-mobile is-4-tablet is-4-desktop">
-      <div class="card">
-        <div class="card-image">
-          <figure class="image">
-            <img src:>
-          </figure>
+    <div class="columns is-mobile">
+      <div class="column card"><div class="dropdown is-hoverable">
+        <div class="dropdown-trigger">
+          <button class="button" aria-haspopup="true" aria-controls="dropdown-menu4">
+            <span>Celebrity Matchmaker</span>
+            <span class="icon is-small">
+              <i class="fas fa-angle-down" aria-hidden="true"></i>
+            </span>
+          </button>
         </div>
-        <div class="card-content">
-          <div class="media">
-            <div class="media-content">
-              <a href="https://user-images.githubusercontent.com/101283174/163512126-d8f0d253-8d8f-4f7d-9a83-010d1c50411c.gif"><button id="start-button" class="button is-danger is-outlined">Celebrity Matchmaker</button></a>
+        <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+          <div class="dropdown-content">
+            <div class="dropdown-item">
+              <p>You can insert <strong>any type of content</strong> within the dropdown menu.</p>
             </div>
           </div>
-          <div class="content">
-            hello
-            <a href="#" #css></a>
-            <br>
-
+        </div>
+      </div>
+      </div>
+      <div class="column card"><div class="dropdown is-hoverable">
+        <div class="dropdown-trigger">
+          <button class="button" aria-haspopup="true" aria-controls="dropdown-menu4">
+            <span>Weather Dashboard</span>
+            <span class="icon is-small">
+              <i class="fas fa-angle-down" aria-hidden="true"></i>
+            </span>
+          </button>
+        </div>
+        <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+          <div class="dropdown-content">
+            <div class="dropdown-item">
+              <p>You can insert <strong>any type of content</strong> within the dropdown menu.</p>
+            </div>
           </div>
-
         </div>
       </div>
     </div>
-    <div class="column is-8-mobile is-4-tablet is-4-desktop">
-      <div class="card">
-        <div class="card-image">
-          <figure class="image">
-            <img src:>
-          </figure>
+      <div class="column card"><div class="dropdown is-hoverable">
+        <div class="dropdown-trigger">
+          <button class="button" aria-haspopup="true" aria-controls="dropdown-menu4">
+            <span>Password Generator</span>
+            <span class="icon is-small">
+              <i class="fas fa-angle-down" aria-hidden="true"></i>
+            </span>
+          </button>
         </div>
-        <div class="card-content">
-          <div class="media">
-            <div class="media-content">
-              <a href="https://user-images.githubusercontent.com/101283174/163512126-d8f0d253-8d8f-4f7d-9a83-010d1c50411c.gif"><button id="start-button" class="button is-danger is-outlined">Celebrity Matchmaker</button></a>
+        <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+          <div class="dropdown-content">
+            <div class="dropdown-item">
+              <p>You can insert <strong>any type of content</strong> within the dropdown menu.</p>
             </div>
           </div>
-          <div class="content">
-            hello
-            <a href="#" #css></a>
-            <br>
-
-          </div>
-
         </div>
       </div>
     </div>
-    <div class="column is-8-mobile is-4-tablet is-4-desktop">
-      <div class="card">
-        <div class="card-image">
-          <figure class="image">
-            <img src:>
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="media">
-            <div class="media-content">
-              <a href="https://user-images.githubusercontent.com/101283174/163512126-d8f0d253-8d8f-4f7d-9a83-010d1c50411c.gif"><button id="start-button" class="button is-danger is-outlined">Celebrity Matchmaker</button></a>
-            </div>
-          </div>
-          <div class="content">
-            hello
-            <a href="#" #css></a>
-            <br>
-
-          </div>
-
-        </div>
-      </div>
     </div>
-    <div class="column is-8-mobile is-4-tablet is-4-desktop">
-      <div class="card">
-        <div class="card-image">
-          <figure class="image">
-            <img src:>
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="media">
-            <div class="media-content">
-              <a href="https://user-images.githubusercontent.com/101283174/163512126-d8f0d253-8d8f-4f7d-9a83-010d1c50411c.gif"><button id="start-button" class="button is-danger is-outlined">Celebrity Matchmaker</button></a>
-            </div>
-          </div>
-          <div class="content">
-            hello
-            <a href="#" #css></a>
-            <br>
-
-          </div>
-
-        </div>
-      </div>
-    </div>
-    <div class="column is-8-mobile is-4-tablet is-4-desktop">
-      <div class="card">
-        <div class="card-image">
-          <figure class="image">
-            <img src:>
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="media">
-            <div class="media-content">
-              <a href="https://user-images.githubusercontent.com/101283174/163512126-d8f0d253-8d8f-4f7d-9a83-010d1c50411c.gif"><button id="start-button" class="button is-danger is-outlined">Celebrity Matchmaker</button></a>
-            </div>
-          </div>
-          <div class="content">
-            hello
-            <a href="#" #css></a>
-            <br>
-
-          </div>
-
-        </div>
-      </div>
-    </div>
-    <div class="column is-8-mobile is-4-tablet is-4-desktop">
-      <div class="card">
-        <div class="card-image">
-          <figure class="image">
-            <img src:>
-          </figure>
-        </div>
-        <div class="card-content">
-          <div class="media">
-            <div class="media-content">
-              <a href="https://user-images.githubusercontent.com/101283174/163512126-d8f0d253-8d8f-4f7d-9a83-010d1c50411c.gif"><button id="start-button" class="button is-danger is-outlined">Celebrity Matchmaker</button></a>
-            </div>
-          </div>
-          <div class="content">
-            hello
-            <a href="#" #css></a>
-            <br>
-
-          </div>
-
-        </div>
-      </div>
-    </div>
-    </section>
+    
     <section class="footer">
       <h2 id="contact">Contact</h2>
       <ul>
