--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="#about-me">About Me</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li><a href="#" target="_blank">Resume</a></li>
+        <li><a href="resume.pdf" target="_blank">Resume</a></li>
     </ul>
   
   
@@ -71,14 +71,15 @@
         </div>
     </section>
 
-
+    <section>
         <div class="modal" id="password-generator">
           <div class="modal-background" id="pg-background"></div>
           <div class="modal-content has-background-white py-5 px-5">
-              <img src="https://drive.google.com/file/d/17y4F-cRet6GzQsdZQrFttVphTxKJxcuM/view" alt="">
+              <img src="https://drive.google.com/file/d/1GwS-fUTwKLpSorddB6QVXwhcOxoq31-o/view" alt="">
             </p>
             </div>
           </div>
+    </section>
     <section class="footer">
       <h2 id="contact">Contact</h2>
       <ul>
