--- a/index.html
+++ b/index.html
@@ -16,31 +16,23 @@
         <li><a href="#contact">Contact</a></li>
         <li><a href="resume.pdf" target="_blank">Resume</a></li>
     </ul>
-  
-  
-  
-  
-  
-  
   <main>
-    <section>
-      <h2>About me</h2>
+    <h2 id="about-me">About me</h2>
+    <section class="level-item text-is-centered">
       <article class="media">
         <figure class="media-left">
-          <p class="image is-500x500">
-            <img src="https://bulma.io/images/placeholders/128x128.png">
+          <p class="image is-128x128">
+            <img class="is-rounded"src="assets/screenshot.jpg">
           </p>
         </figure>
         <div class="media-content">
           <div class="content">
-            <p>
+            <p id="bio">
               <br>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+              <br>
+              Welcome! My name is Callan Hunter and I am a student at UC Berkeley Coding Bootcamp. I'm interested in pursuing a career in being a Full-Stack Engineer! Down below are my projects I have completed and my contact info as well.
             </p>
           </div>
-        </div>
-        <div class="media-right">
-          <button class="delete"></button>
         </div>
       </article>
     </section>
